Bug 123742 - Creating two documents from template in the same "session" leads to crash
Summary: Creating two documents from template in the same "session" leads to crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-27 14:15 UTC by Nicolas Christener
Modified: 2019-03-28 15:33 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Video showing the crash (3.11 MB, video/mp4)
2019-02-27 14:20 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-02-27 14:15:09 UTC
Description:
Creating two documens from templates (different templates) leads to a crash of the iOS app.

Steps to Reproduce:
1. Open the iOS app and create a document based on a template
2. Close that document
3. Create an other document from a template

Actual Results:
The second document should be created and opened.

Expected Results:
The app crashes.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nicolas Christener 2019-02-27 14:20:14 UTC
Created attachment 149632 [details]
Video showing the crash
Comment 2 Commit Notification 2019-03-28 15:32:26 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/+/e2f48faf1441d88e545ff87b42a90a14bfcc04ac%5E%21

tdf#123742: Fix lifecycle issues for the "Office" object
Comment 3 How can I remove my account? 2019-03-28 15:33:07 UTC
The above fixes the issue. Is also in the collabora-online-4 branch and thus will be in the next build of the app.