ios/Mobile/AppDelegate.h
@@ -17,7 +17,6 @@
 @end
 
 extern NSString *app_locale;
-extern LibreOfficeKit *lo_kit;
 
 // vim:set shiftwidth=4 softtabstop=4 expandtab:
 
